# reinforcement-learning-learnings

./: README.md  main.py  pyproject.toml
rll/mountain_car_sarsa/: __init__.py  agent.py  utils.py
rll/taxi/: README.md  __init__.py  agent.py  model.npy  utils.py
rll/taxi/model/: model_alpha_0-1_gamma_0-1.npy  model_alpha_0-1_gamma_0-6.npy  model_alpha_0-1_gamma_0-9.npy  model_alpha_1_gamma_0-1.npy  model_alpha_1_gamma_0-6.npy  model_alpha_1_gamma_0-9.npy
